--- a/index.html
+++ b/index.html
@@ -3,5 +3,8 @@
 <body>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
+<div class="game-wrapper">
+    <iframe src="/assets/${YOUR_GAME_DIRECTORY}/${YOUR_GAME_FILE}.html" class="game-frame" title="${ANY_TITLE_HERE}"></iframe>
+</div>
 </body>
 </html>
