--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
 <body>
 <h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<p>WORK.</p>
 <div class="game-wrapper">
-    <iframe src="/assets/${YOUR_GAME_DIRECTORY}/${YOUR_GAME_FILE}.html" class="game-frame" title="${ANY_TITLE_HERE}"></iframe>
+    <iframe src="/Web/Maurice.html" class="game-frame" title="${ANY_TITLE_HERE}"></iframe>
 </div>
 </body>
 </html>
